# chess-position-evaluator

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/: README.md
crates/inference/: Cargo.toml
crates/onnx-backend-benchmark/: Cargo.toml
crates/onnx-backend-benchmark/benches/: inference.rs
crates/onnx-backend-benchmark/src/: lib.rs
crates/preprocess/: .gitignore  Cargo.toml
crates/tree-search/: Cargo.toml  README.md
data/: README.md
docs/: cleanup-action-items.md
docs/commands/: README.md  template.md
docs/designs/: 2026-05-25.00-runtime-data-artifact-layout.md  2026-05-25.01-dataset-evaluation-reporting.md  2026-05-25.02-train-validation-test-split.md  2026-05-25.03-naive-board-self-attention.md  2026-05-25.04-attention-relation-bias.md  2026-05-26.00-attention-edge-gate.md  2026-05-26.01-stacked-edge-gated-attention-ffn.md  2026-05-26.02-parallel-cnn-attention-fusion.md  2026-05-27.00-principled-parallel-branch-fusion.md  2026-05-27.01-funnel-narrow-attention.md  2026-05-27.02-funnel-interleaved-attention.md  2026-05-28.00-funnel-depth-preserving-refresh.md
docs/experiments/: 2026-05-25.00-split90505-baseline-100e.md  2026-05-25.01-naive-board-self-attention-100e.md  2026-05-25.02-ghost-ca-r4-192ch-mhattn4x16-mid1-100e.md  2026-05-25.03-ghost-ca-r4-192ch-mhattn4x16-mid1-matched-recipe-100e.md  2026-05-25.04-ghost-ca-r4-256ch-mhattn4x16-mid1-best-recipe-100e.md  2026-05-25.05-ghost-ca-r4-256ch-mhattn4x16-rel9dist8-mid1-bestrecipe-100e.md  2026-05-26.00-ghost-ca-r4-256ch-mhattn4x16-edgegate-rel9dist8-mid1-bestrecipe-100e.md  2026-05-26.01-ghost-ca-r4-256ch-mhattn4x16-edgegate3-ffn64-mid1-bestrecipe-100e.md  2026-05-26.02-ghost-ca-r4-256ch-mhattn4x16-edgegate3-ffn64-mid1-warmupcosine5-lr5e4-100e.md  2026-05-26.03-ghost-ca-r4-256ch-noattn-warmupcosine5-lr5e4-100e.md  2026-05-26.04-ghost-ca-r4-256ch-edgegate1-warmupcosine5-lr5e4-100e.md  2026-05-26.05-ghost-ca-r4-256ch-parallel-cnn3-attn3ffn64-fuse1x1-materialprior-warmupcosine5-lr5e4-100e.md  2026-05-26.06-material-label-calibration-and-dataset-geometry.md  2026-05-26.07-source-material-signal-diagnostics.md  2026-05-26.08-ghost-ca-r4-256ch-parallel-cnn3-attn3ffn64-fuse1x1-materialfeatures-warmupcosine5-lr5e4-100e.md  README.md  (+17 more)
models/: .gitignore
preprocess/: Cargo.toml
python/: analyze_material_label_calibration.py  analyze_material_signal.py  analyze_parallel_fusion.py  analyze_rank.py  battle.py  benchmark_pareto.py  cli.py  eval.py  eval_dataset.py  export_onnx.py  test.py  trace_processed_rows.py  train_eval.py
src/: battle.py  chess_dataset.py  chess_evaluation_reader.py  draw_cp_histogram.py  eval.py  fen2tensor.py  focal_loss.py  main.py  model.py  prepare_train_data.py  preprocess_lichess_db.py  test.py  train.py  train_eval.py
src/libs/: model.py  (+4 more)
train-eval/: chess_dataset.py  chess_evaluation_reader.py  main.py  model.py  train.py
train-policy/: chess_board.py  chess_dataset.py  chess_evaluation_reader.py  main.py  model.py  train.py
(+85 files in other folders)
