[project]
name = "chess-position-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "chess>=1.11.2",
    "numpy>=2.4.0",
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[tool.uv]
index = [
    { name = "pytorch", url = "https://download.pytorch.org/whl/cu128", explicit = true },
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
