[project]
name = "chess-position-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "chess>=1.11.2",
    "numpy>=2.4.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "onnxscript>=0.5.0",
    "standard-imghdr>=3.13.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
    "wandb>=0.23.0",
]

[project.scripts]
cpe = "python.cli:app"

[tool.uv]
index = [
    { name = "pytorch", url = "https://download.pytorch.org/whl/cu128", explicit = true },
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
